[gd_scene load_steps=28 format=3 uid="uid://cfa1c1qjimgtp"]

[ext_resource type="Shader" uid="uid://d2l4kvn6jf350" path="res://Shaders/couleur.tres" id="1_1ea4k"]
[ext_resource type="Texture2D" uid="uid://bnjnkis0qwspn" path="res://Dessins/mec.png" id="2_5qmcp"]
[ext_resource type="Script" path="res://Scripts/Personnage.gd" id="3_veaqq"]
[ext_resource type="Texture2D" uid="uid://jp148nn8fmov" path="res://Dessins/bulle.png" id="4_ypdur"]
[ext_resource type="PackedScene" uid="uid://dri423lovjsxw" path="res://Scenes/Mission.tscn" id="5_u25ct"]
[ext_resource type="Script" path="res://Scripts/Missions/Mission_baudruche.gd" id="6_lf0i1"]
[ext_resource type="Texture2D" uid="uid://ccybloapjpnqa" path="res://TilesObjets/tile002.png" id="6_rg7vo"]
[ext_resource type="Script" path="res://Scripts/Missions/Mission_puzzle.gd" id="7_0nhh7"]
[ext_resource type="Texture2D" uid="uid://dawupw145hfme" path="res://TilesObjets/tile008.png" id="8_ocy36"]
[ext_resource type="Texture2D" uid="uid://bf3w7yren34t5" path="res://TilesObjets/tile005.png" id="9_0usdv"]
[ext_resource type="Script" path="res://Scripts/PersonnageBody.gd" id="10_2e1yv"]
[ext_resource type="Texture2D" uid="uid://ciefim0tqgui4" path="res://TilesObjets/tile010.png" id="10_jhqfc"]
[ext_resource type="Script" path="res://Scripts/Missions/Mission_rose.gd" id="11_y7wa8"]
[ext_resource type="Script" path="res://Scripts/Missions/Mission_casser_tout.gd" id="13_dcrqu"]
[ext_resource type="Script" path="res://Scripts/Missions/Mission_cle.gd" id="14_5jg5n"]
[ext_resource type="Script" path="res://Scripts/Missions/Mission_ballon_appart.gd" id="15_5vapg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nj0fj"]
resource_local_to_scene = true
shader = ExtResource("1_1ea4k")
shader_parameter/isSad = true

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_gewb4"]

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ltasl"]

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_3ujs0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wxs4c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rwf7g"]
advance_mode = 2
advance_condition = &"aboiement"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vyr07"]
advance_mode = 2
advance_condition = &"troploin"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uwops"]
advance_mode = 2
advance_condition = &"complete"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_i7jeo"]
states/Heureux/node = SubResource("AnimationNodeBlendSpace1D_gewb4")
states/Heureux/position = Vector2(624, 74)
states/Parle/node = SubResource("AnimationNodeBlendSpace1D_ltasl")
states/Parle/position = Vector2(510, 160)
states/Start/position = Vector2(188, 74)
states/Triste/node = SubResource("AnimationNodeBlendSpace1D_3ujs0")
states/Triste/position = Vector2(412, 74)
transitions = ["Start", "Triste", SubResource("AnimationNodeStateMachineTransition_wxs4c"), "Triste", "Parle", SubResource("AnimationNodeStateMachineTransition_rwf7g"), "Parle", "Triste", SubResource("AnimationNodeStateMachineTransition_vyr07"), "Triste", "Heureux", SubResource("AnimationNodeStateMachineTransition_uwops")]

[sub_resource type="CircleShape2D" id="CircleShape2D_n8ilb"]
radius = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_brrbc"]
radius = 2.99116
height = 11.1209

[node name="Personnage" type="Sprite2D"]
material = SubResource("ShaderMaterial_nj0fj")
texture = ExtResource("2_5qmcp")
script = ExtResource("3_veaqq")
nom = "Godoto"

[node name="Requete" type="Sprite2D" parent="."]
position = Vector2(-62.7573, -149.458)
scale = Vector2(0.394822, 0.300292)
texture = ExtResource("4_ypdur")

[node name="Missions" type="Node2D" parent="Requete"]

[node name="MissionBaudruche" parent="Requete/Missions" instance=ExtResource("5_u25ct")]
texture = ExtResource("6_rg7vo")
script = ExtResource("6_lf0i1")

[node name="MissionPuzzle" parent="Requete/Missions" instance=ExtResource("5_u25ct")]
texture = ExtResource("8_ocy36")
script = ExtResource("7_0nhh7")

[node name="MissionRose" parent="Requete/Missions" instance=ExtResource("5_u25ct")]
texture = ExtResource("10_jhqfc")
script = ExtResource("11_y7wa8")

[node name="MissionCasserTout" parent="Requete/Missions" instance=ExtResource("5_u25ct")]
texture = ExtResource("9_0usdv")
script = ExtResource("13_dcrqu")

[node name="MissionElleEstOuMaCle" parent="Requete/Missions" instance=ExtResource("5_u25ct")]
script = ExtResource("14_5jg5n")

[node name="MissionBallonAppart" parent="Requete/Missions" instance=ExtResource("5_u25ct")]
script = ExtResource("15_5vapg")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_i7jeo")
parameters/conditions/aboiement = false
parameters/conditions/complete = false
parameters/conditions/troploin = false
parameters/Heureux/blend_position = 0
parameters/Parle/blend_position = 0
parameters/Triste/blend_position = 0

[node name="ZoneDeDetectionObjets" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneDeDetectionObjets"]
shape = SubResource("CircleShape2D_n8ilb")

[node name="ZoneDeDetectionPersos" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneDeDetectionPersos"]
shape = SubResource("CircleShape2D_n8ilb")

[node name="PersonnageBody" type="StaticBody2D" parent="."]
position = Vector2(1.0842e-19, 4)
scale = Vector2(3.71059, 3.99725)
collision_layer = 5
script = ExtResource("10_2e1yv")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PersonnageBody"]
scale = Vector2(0.991082, 0.989811)
shape = SubResource("CapsuleShape2D_brrbc")

[connection signal="ouaf" from="PersonnageBody" to="." method="_on_aboiement"]
